# sdk-nrf

./: west.yml
drivers/wifi/nrf700x/: Kconfig.nrf700x
include/net/: library.h
modules/hostap/src/: supp_api.c  supp_api.h  supp_main.c
modules/wfa-qt/: CMakeLists.txt
modules/wfa-qt/src/: indigo_api_callback_dut.c  vendor_specific_dut.c
samples/net/aws_iot/: Kconfig.sysbuild  sample.yaml
samples/net/azure_iot_hub/: sample.yaml
samples/net/coap_client/: sample.yaml
samples/net/download/: sample.yaml
samples/net/http_server/: sample.yaml
samples/net/https_client/: sample.yaml
samples/net/mqtt/: sample.yaml
samples/net/udp/: sample.yaml
samples/wifi/ble_coex/: sample.yaml
samples/wifi/monitor/: Kconfig  nrf70_config  overlay-net-capture.conf  overlay-usb-next.conf  prj.conf  sample.yaml  usbd_next_ecm.overlay
samples/wifi/multicast/: multicast  prj.conf
samples/wifi/offloaded_raw_tx/: sample.yaml
samples/wifi/promiscuous/: sample.yaml
samples/wifi/provisioning/: sample.yaml
samples/wifi/radio_test/: sample.yaml
samples/wifi/shell/: CMakeLists.txt  Kconfig  overlay-netusb.conf  prj.conf  sample.yaml
samples/wifi/shell/src/: wfa_qt_shell.c  wifi_main.c  wifi_raw_tx_packet_shell.c
samples/wifi/shell/src/dut/: wfa_cs.c
samples/wifi/shell/src/qtrack/: eloop.c  indigo_api_callback.h  indigo_api_callback_dut.c  indigo_packet.c  linux_derived.h  qt_main.c  utils.c  utils.h  vendor_specific.h  vendor_specific_dut.c  wpa_ctrl.c
samples/wifi/shell/wfa_zephyr_ca/lib/: wfa_ca_resp.c
samples/wifi/sta/: CMakeLists.txt  Kconfig  README.rst  prj.conf  sample.yaml
samples/wifi/sta/src/: main.c
snippets/nrf70-wifi/: snippet.yml
(+52 files in other folders)
